haeder and footer added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    home
+    <div>
+        <header>header</header>
+        <footer>footer</footer>
+    </div>
 </body>
 </html>
